SonarLint fix